# store-sager

./: .gitignore  README.md  main.py  pyproject.toml
ml/nicolai-mnist/: mnist_train.py  own.py
ml/nicolai-mnist/kattis/: gen_weights.py  mnist2_weights.txt
poker/: __init__.py  mc_poker.py  poker.md
poker-library/: pyproject.toml
stocks-library/: pyproject.toml
stocks-library/stocks/dataset/: __init__.py  first_yfinance.py
stocks/datasets/: __init__.py  yf_finance_window_dataset.py
stocks/experiments/: __init__.py
stocks/models/: timeseries_ffn.py
storesager/: __init__.py  __main__.py
storesager/stocks/: __init__.py
