[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "store-sager"
version = "0.1.0"
description = "Store sager der skal give os store kager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=1.3.0",
]

[project.scripts]
store-sager = "storesager.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["storesager"]
