[project]
name = "store-sager"
version = "0.1.0"
description = "Store sager der skal give os store kager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "poker",
    "stocks",
]

[tool.uv.sources]
poker = { workspace = true }
stocks = { workspace = true }

[tool.uv.workspace]
members = ["poker-library", "stocks-library"]
