[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "store-sager"
version = "0.1.0"
description = "Store sager der skal give os store kager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "torch>=2.11.0",
    "tqdm>=4.67.0",
    "yfinance>=1.3.0",
]

[project.scripts]
mc-poker = "poker.mc_poker:main"

[tool.hatch.build.targets.wheel]
packages = ["stocks", "poker"]
