[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poker"
version = "0.1.0"
description = "Monte Carlo poker equity helpers"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mc-poker = "poker.mc_poker:main"

[tool.hatch.build.targets.wheel]
packages = ["poker"]
