[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stocks"
version = "0.1.0"
description = "Stock market data helpers"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.11.0",
    "yfinance>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["stocks"]
